--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,15 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <ProgressBar
-        android:id="@+id/activity_choose_progress_bar"
+    <LinearLayout
+        android:id="@+id/activity_choose_progress_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center">
+
+        <ProgressBar
+            android:id="@+id/activity_choose_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
+
+        <ImageView
+            android:id="@+id/activity_choose_cancel"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_stop"/>
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_choose_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
 </LinearLayout>
