--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,48 +9,88 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/activity_main_menu_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <View
+                android:id="@+id/activity_main_menu_home_delimiter"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="-1dp"
+                android:layout_marginRight="-1dp"
+                android:background="#ccc"
+                android:elevation="1dp"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_action_home"/>
+        </LinearLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
             android:background="#ccc"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/activity_main_menu_search"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <!--<ImageButton-->
-            <!--android:id="@+id/activity_choose_menu_sort_likes"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="64dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:background="@drawable/ic_sort"/>-->
-
-            <ImageView
-                android:id="@+id/activity_main_menu_home"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_action_home"/>
+            <View
+                android:id="@+id/activity_main_menu_search_delimiter"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="-1dp"
+                android:layout_marginRight="-1dp"
+                android:background="#ccc"
+                android:elevation="1dp"/>
 
             <ImageView
-                android:id="@+id/activity_main_menu_search"
-                android:layout_width="0dp"
+                android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/ic_action_search"/>
+        </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#ccc"/>
+
+        <LinearLayout
+            android:id="@+id/activity_main_menu_settings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <View
+                android:id="@+id/activity_main_menu_settings_delimiter"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="-1dp"
+                android:layout_marginRight="-1dp"
+                android:background="#ccc"
+                android:elevation="1dp"/>
 
             <ImageView
-                android:id="@+id/activity_main_menu_logout"
-                android:layout_width="0dp"
+                android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:src="@drawable/ic_action_exit"/>
+                android:src="@drawable/ic_action_settings"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -58,7 +98,6 @@
         android:id="@+id/activity_main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/activity_main_menu_ll"
-        android:orientation="vertical"/>
+        android:layout_above="@id/activity_main_menu_ll"/>
 
 </RelativeLayout>
