--- a/app/src/main/res/layout/item_users_list.xml
+++ b/app/src/main/res/layout/item_users_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#fff"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="16dp">
 
@@ -24,6 +25,7 @@
             android:id="@+id/item_users_list_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@string/font_light"
             android:textSize="16dp"
             android:textStyle="bold"/>
 
@@ -31,6 +33,7 @@
             android:id="@+id/item_users_list_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@string/font_light"
             android:textSize="16dp"/>
     </LinearLayout>
 </LinearLayout>
