--- a/app/src/main/res/layout/view_profile.xml
+++ b/app/src/main/res/layout/view_profile.xml
@@ -37,6 +37,7 @@
                     android:layout_gravity="bottom"
                     android:layout_weight="1"
                     android:ellipsize="end"
+                    android:fontFamily="@string/font_light"
                     android:maxLines="1"
                     android:textColor="#000"
                     android:textSize="30dp"
@@ -52,12 +53,14 @@
                         android:id="@+id/profile_view_followers_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/font_light"
                         android:textSize="20dp"
                         tools:text="50"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/font_light"
                         android:text="followers"
                         android:textSize="12dp"/>
                 </LinearLayout>
@@ -80,12 +83,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="4dp"
+                        android:fontFamily="@string/font_light"
                         android:textSize="26dp"
                         tools:text="60"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/font_light"
                         android:text="posts"
                         android:textSize="16dp"/>
                 </LinearLayout>
@@ -101,12 +106,14 @@
                         android:id="@+id/profile_view_following_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/font_light"
                         android:textSize="20dp"
                         tools:text="26"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@string/font_light"
                         android:text="following"
                         android:textSize="12dp"/>
                 </LinearLayout>
