--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,36 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ru.egor_d.instarating.ProfileView
-        android:id="@+id/activity_choose_profile_view"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <LinearLayout
-        android:id="@+id/activity_choose_progress_ll"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:fitsSystemWindows="true">
 
-        <ProgressBar
-            android:id="@+id/activity_choose_progress_bar"
-            android:layout_width="wrap_content"
+        <ru.egor_d.instarating.ProfileView
+            android:id="@+id/activity_choose_profile_view"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"/>
+            app:layout_scrollFlags="scroll|enterAlways|snap"/>
 
-        <ImageView
-            android:id="@+id/activity_choose_cancel"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@drawable/ic_stop"/>
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/activity_choose_progress_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="center"
+            android:minHeight="?attr/actionBarSize">
+
+            <ProgressBar
+                android:id="@+id/activity_choose_progress_bar"
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="center_horizontal"/>
+
+            <ImageView
+                android:id="@+id/activity_choose_cancel"
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@drawable/ic_stop"/>
+        </LinearLayout>
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_choose_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_social_share"/>
+
+</android.support.design.widget.CoordinatorLayout>
