--- a/app/src/main/res/layout/view_profile.xml
+++ b/app/src/main/res/layout/view_profile.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_margin="16dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:padding="16dp">
 
@@ -18,11 +19,12 @@
             android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="16dp"
-            tools:src="@drawable/ic_sort"/>
+            android:src="@drawable/ic_info_black_24dp"
+            tools:src="@drawable/tw__ic_logo_default"/>
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
@@ -30,18 +32,41 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/profile_view_username"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:fontFamily="@string/font_light"
-                    android:maxLines="1"
-                    android:textColor="#000"
-                    android:textSize="30dp"
-                    tools:text="xariton"/>
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/profile_view_posts_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="4dp"
+                        android:fontFamily="@string/font_light"
+                        android:textColor="#333"
+                        android:textSize="26dp"
+                        tools:text="60"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@string/font_light"
+                        android:text="posts"
+                        android:textColor="#333"
+                        android:textSize="16dp"/>
+                </LinearLayout>
+                <!--<TextView-->
+                <!--android:id="@+id/profile_view_username"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="bottom"-->
+                <!--android:layout_weight="1"-->
+                <!--android:ellipsize="end"-->
+                <!--android:fontFamily="@string/font_light"-->
+                <!--android:maxLines="1"-->
+                <!--android:textColor="#000"-->
+                <!--android:textSize="30dp"-->
+                <!--tools:text="xariton"/>-->
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -54,6 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/font_light"
+                        android:textColor="#333"
                         android:textSize="20dp"
                         tools:text="50"/>
 
@@ -62,6 +88,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/font_light"
                         android:text="followers"
+                        android:textColor="#333"
                         android:textSize="12dp"/>
                 </LinearLayout>
             </LinearLayout>
@@ -69,6 +96,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -78,21 +106,23 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/profile_view_posts_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="4dp"
-                        android:fontFamily="@string/font_light"
-                        android:textSize="26dp"
-                        tools:text="60"/>
+                    <!--<TextView-->
+                    <!--android:id="@+id/profile_view_posts_count"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginRight="4dp"-->
+                    <!--android:fontFamily="@string/font_light"-->
+                    <!--android:textColor="#333"-->
+                    <!--android:textSize="26dp"-->
+                    <!--tools:text="60"/>-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@string/font_light"
-                        android:text="posts"
-                        android:textSize="16dp"/>
+                    <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:fontFamily="@string/font_light"-->
+                    <!--android:text="posts"-->
+                    <!--android:textColor="#333"-->
+                    <!--android:textSize="16dp"/>-->
                 </LinearLayout>
 
                 <LinearLayout
@@ -107,6 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/font_light"
+                        android:textColor="#333"
                         android:textSize="20dp"
                         tools:text="26"/>
 
@@ -115,14 +146,10 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@string/font_light"
                         android:text="following"
+                        android:textColor="#333"
                         android:textSize="12dp"/>
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </FrameLayout>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#ccc"/>
-</LinearLayout>
+</android.support.v7.widget.CardView>
