--- a/app/src/main/res/menu/menu_activity_main_drawer_not_logged.xml
+++ b/app/src/main/res/menu/menu_activity_main_drawer_not_logged.xml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group_screen"
+        android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/nav_login"
             android:icon="@drawable/ic_action_home"
-            android:title="Login"/>
+            android:title="@string/login"/>
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_action_search"
-            android:title="Search"/>
-        <!--<item-->
-        <!--android:id="@+id/nav_manage"-->
-        <!--android:icon="@drawable/ic_menu_manage"-->
-        <!--android:title="Tools"/>-->
+            android:title="@string/search"/>
     </group>
-    <group>
+    <group android:id="@+id/group_actions">
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_menu_share"
-            android:title="Share"/>
+            android:title="@string/share"/>
         <item
             android:id="@+id/nav_rate"
             android:icon="@drawable/ic_action_grade"
-            android:title="Rate"/>
-        <item
-            android:id="@+id/nav_logout"
-            android:icon="@drawable/ic_action_exit"
-            android:title="Logout"/>
+            android:title="@string/rate"/>
     </group>
 
 </menu>
